modelos reestructurados
